@@ -1,3 +1,7 @@
+2008-04-20  David Zeuthen  <davidz@redhat.com>
+
+	* daemon/gvfsbackendarchive.c: some minor fixes (#528950)
+
 2008-04-16  David Zeuthen  <davidz@redhat.com>
 
 	* hal/ghalvolumemonitor.c: (should_mount_be_ignored),
